test/test-files/analyzer/operators/error-member-access-only-struct/exception.out
Semantic error in : ./test-files/analyzer/operators/error-member-access-only-struct/source.spice:3:5:
Member access is only allowed on structs: Cannot apply member access operator on double

doubleVar.test = 1;
^^^^^^^^^^^^^^